; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-nested.c_test_handle_scope_val.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-nested.c_test_handle_scope_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRYX_SCOPE_PRELIST_SIZE = common dso_local global i32 0, align 4
@JERRY_GC_PRESSURE_LOW = common dso_local global i32 0, align 4
@native_free_cb_call_count = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_handle_scope_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_handle_scope_val() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @jerryx_open_handle_scope(i64* %1)
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %13, %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 2
  br i1 %7, label %8, label %16

8:                                                ; preds = %5
  %9 = load i32, i32* @JERRYX_SCOPE_PRELIST_SIZE, align 4
  %10 = mul nsw i32 %9, 2
  %11 = call i32 @create_object_nested(i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  br label %13

13:                                               ; preds = %8
  %14 = load i32, i32* %2, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %2, align 4
  br label %5

16:                                               ; preds = %5
  %17 = call i64 (...) @jerryx_handle_scope_get_current()
  %18 = load i64, i64* %1, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @TEST_ASSERT(i32 %20)
  %22 = load i32, i32* @JERRY_GC_PRESSURE_LOW, align 4
  %23 = call i32 @jerry_gc(i32 %22)
  %24 = load i64, i64* @native_free_cb_call_count, align 8
  %25 = icmp eq i64 %24, 0
  %26 = zext i1 %25 to i32
  %27 = call i32 @TEST_ASSERT(i32 %26)
  %28 = load i64, i64* %1, align 8
  %29 = call i32 @jerryx_close_handle_scope(i64 %28)
  ret void
}

declare dso_local i32 @jerryx_open_handle_scope(i64*) #1

declare dso_local i32 @create_object_nested(i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i64 @jerryx_handle_scope_get_current(...) #1

declare dso_local i32 @jerry_gc(i32) #1

declare dso_local i32 @jerryx_close_handle_scope(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
